<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/MainActivityStyle"
        tools:context=".MainActivity">
<!--todo repensar a escolha das views-->
    <LinearLayout
            android:id="@+id/mainLL"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="200dp">

        <TextView
                android:id="@+id/operationTXT"
                style="@style/MainNumbersStyle"
                android:textSize="48sp"
                android:maxLines="1"/>

        <TextView
                android:id="@+id/resultTXT"
                android:textSize="32sp"
                style="@style/MainNumbersStyle"
                android:maxLines="1"/>
    </LinearLayout>

    <LinearLayout android:id="@+id/bottomRL"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical"
                  android:layout_marginTop="200dp">
        <LinearLayout android:layout_width="match_parent"
                      android:layout_weight="1"
                      android:layout_height="0dp"
                      android:orientation="horizontal"
                      android:id="@+id/firstColumnLL">
            <Button
                    style="@style/ActionStyle"
                    android:id="@+id/clearTXT"
                    android:text="@string/action_clear"/>
            <Button
                    style="@style/ActionStyle"
                    android:id="@+id/parenthesisLeftTXT"
                    android:text="@string/action_parenthesis_left"/>
            <Button
                    style="@style/ActionStyle"
                    android:id="@+id/parenthesisRightTXT"
                    android:text="@string/action_parenthesis_right"/>
            <Button
                    style="@style/ActionStyle"
                    android:id="@+id/divisionTXT"
                    android:text="@string/action_divide"/>
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent"
                      android:orientation="horizontal"
                      android:layout_weight="1"
                      android:layout_height="0dp">
            <Button
                    style="@style/NumbersStyle"
                    android:id="@+id/sevenTXT"
                    android:text="@string/number_seven"/>
            <Button
                    style="@style/NumbersStyle"
                    android:id="@+id/eightTXT"
                    android:text="@string/number_eight"/>
            <Button
                    style="@style/NumbersStyle"
                    android:id="@+id/nineTXT"
                    android:text="@string/number_nine"/>
            <Button
                    style="@style/ActionStyle"
                    android:id="@+id/multiplicationTXT"
                    android:text="@string/action_multi"/>
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent"
                      android:orientation="horizontal"
                      android:layout_weight="1"
                      android:layout_height="0dp">
            <Button
                    style="@style/NumbersStyle"
                    android:id="@+id/fourTXT"
                    android:text="@string/number_four"/>
            <Button
                    style="@style/NumbersStyle"
                    android:id="@+id/fiveTXT"
                    android:text="@string/number_five"/>
            <Button
                    style="@style/NumbersStyle"
                    android:id="@+id/sixTXT"
                    android:text="@string/number_six"/>
            <Button
                    style="@style/ActionStyle"
                    android:id="@+id/sumTXT"
                    android:text="@string/action_sum"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:layout_height="0dp">
            <Button
                    style="@style/NumbersStyle"
                    android:id="@+id/oneTXT"
                    android:text="@string/number_one"/>
            <Button
                    style="@style/NumbersStyle"
                    android:id="@+id/twoTXT"
                    android:text="@string/number_two"/>
            <Button
                    style="@style/NumbersStyle"
                    android:id="@+id/threeTXT"
                    android:text="@string/number_three"/>
            <Button
                    style="@style/ActionStyle"
                    android:id="@+id/lessTXT"
                    android:text="@string/action_less"/>
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent"
                      android:orientation="horizontal"
                      android:layout_weight="1"
                      android:layout_height="0dp">
            <Button
                    style="@style/NumbersStyle"
                    android:id="@+id/dotTXT"
                    android:text="@string/dot"/>
            <Button
                    style="@style/NumbersStyle"
                    android:id="@+id/zeroTXT"
                    android:text="@string/number_zero"/>
            <ImageView
                    style="@style/NumbersStyle"
                    android:id="@+id/backspaceTXT"
                    android:src="@drawable/backspace"
                    android:contentDescription="@string/dot"
                    android:scaleType="center"/>
            <Button
                    style="@style/ActionStyle"
                    android:id="@+id/equalTXT"
                    android:text="@string/action_equal"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>